changes for class 1

--- a/_posts/2016-09-07-students.md
+++ b/_posts/2016-09-07-students.md
@@ -3,3 +3,27 @@ layout: post
 title:  "Students"
 permalink: "/students"
 ---
+
+## Capstone 1
+
+Cal Affleck<br>
+Lupe Avalos<br>
+Carolyn Castanon<br>
+Andy Chuong<br>
+Jimmy Cordova<br>
+Susana Gomez-Burgos<br>
+Michael Gough<br>
+Kristof Klipfel<br>
+Chris Koski<br>
+Keren Megory-Cohen<br>
+Melissa Moonie<br>
+Maggie Patton<br>
+
+<br>
+
+## Capstone 2
+
+Marla Bernstein<br>
+Michael Gough<br>
+Meridith Richter<br>
+Brady Risendal<br>
