--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -8,11 +8,9 @@ permalink: '/schedule'
 <!-- * Do not remove this line (it will not be displayed) 
 {:toc} -->
 
-<br>
-
 ## Week 1
 
-<span class="date">January 25</span>
+<span class="date">January 18</span>
 
 <span class="underlined">In Class</span>
 
@@ -24,7 +22,7 @@ permalink: '/schedule'
 	+ Concept Development
 	+ Research
 
-<span class="underlined">In Class</span>
+<span class="underlined">Homework</span>
 
 + Set up your online journal and email me a link
 + Precedents / Topics and things you’re most interested in
@@ -35,79 +33,272 @@ permalink: '/schedule'
 
 ## Week 2
 
-<span class="underlined">In Class</span>
-+ Portfolio Presentations
+<span class="date">January 25</span>
 
 <span class="underlined">In Class</span>
+
++ Portfolio Presentations
+
+<span class="underlined">Homework</span>
+
 + Mood board
 + Dream review
 + Research + References
-+ Reading on Publics and Counterpublics
++ Read [Publics and Counterpublics]()
 
 <br>
 
 ## Week 3
 
+<span class="date">February 1</span>
+
+<span class="underlined">In Class</span>
+
++ Lecture / Discussion:
+	+ Audience / Publics
+	+ Personas
+	+ How do *you* fit into your work... 
++ Developing a schedules
++ Overview and Instructions for Capstone Proposal
+
+
+<span class="underlined">Homework</span>
+
++ Make something to make your idea feel more real…
+	+ This depends on your specific project and interests, but this could be a cardboard model, clay, toothpicks, etc. This could also be storyboards or paper mock ups of screens. Bring to class during week 4.
++ Models, scenarios, sketches - Written scenario, UX Persona…
+	+ Who is the target user? Develop a thorough [character profile]() of the user.
++ Envision your project in multiple formats
++ Work on your Production Schedule
++ Work on Project Proposal
++ Research / AYP
+
+
 <br>
 
 ## Week 4
 
+<span class="date">February 8</span>
+
+<span class="underlined">In Class</span>
+
++ Lecture / Discussion:
+	+ DOCUMENTATION!!!!!!!!!!!
++ Show & tell of scenarios, models, etc. 
++ Peer feedback
+
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+
++ Present your progress
++ Review drafts of proposals and schedules
+
+<span class="underlined">Homework</span>
+
++ Begin to make contact with outside advisors / mentors 
++ Finalize proposals
++ Finalize schedules
++ AYP
+
 <br>
 
+#### 💥 MILESTONE - Submit Project Proposal by 5:00 p.m. on Thursday, February 9th
+
+*You will receive a thumbs-up or thumbs-down on your proposal. If you get a thumbs down, you will be notified and must work with your advisor to revise the concept. 
+You must have an approved thesis to continue the semester.*
+
+<br>
+
+<!-- ### 👉  &nbsp; *Weeks 5-10: Design, Production, Prototyping, Development* -->
+
+<!-- <br> -->
+
 ## Week 5
+
+<span class="date">February 15</span>
+
+<span class="underlined">In Class</span>
+
++ Lecture / Discussion
+	+ Creativity
+	+ Storytelling
+
+
+<span class="underlined">Homework</span>
+
++ AYP
 
 <br>
 
 ## Week 6
 
+<span class="date">February 22</span>
+
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+
+<span class="underlined">Homework</span>
+
++ AYP
+
+<br>
+
+#### 💥 MILESTONE -  Projects set. &nbsp; No change of topics after March 1st.
+
 <br>
 
 ## Week 7
+
+<span class="date">March 1</span>
+
+<span class="underlined">In Class</span>
+
++ Presentation Guidelines
+
+<span class="underlined">Homework</span>
+
++ Prepare midterm presentations
++ AYP
+
 
 <br>
 
 ## Week 8
 
+<span class="date">March 8</span>
+
+<span class="underlined">In Class</span>
+
++ Midterm Presentations: **Capstone 2**
+
+<span class="underlined">Homework</span>
+
++ AYP
+
 <br>
 
 ## Week 9
+
+<span class="date">March 15 1</span>
+
+<span class="underlined">In Class</span>
+
++ Midterm Presentations: **Capstone 1**
+
+<span class="underlined">Homework</span>
+
++ AYP
 
 <br>
 
 ## Week 10
 
+<span class="date">March 22</span>
+
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+
+<span class="underlined">Homework</span>
+
++ AYP
+
+<br>
+
+#### 💥 MILESTONE -  User testing Event
+
 <br>
 
 ## Week 11
+
+<span class="date">March 29</span>
+
+*NO CLASS - SPRING BREAK*
+
+<span class="underlined">Homework</span>
+
++ Rest up 😎
++ But also… AYP!
+
+
+<br>
+
+*At this point, you need the time to work, more than you need class time. So, after spring break, you will be given significant time to work on your own as well as have 1:1 appointments with your Instructor.*
 
 <br>
 
 ## Week 12
 
+<span class="date">April 5</span>
+
+<span class="underlined">In Class</span>
+
++ Documentation Check-in
+
+<span class="underlined">Homework</span>
+
++ AYP
+
 <br>
 
 ## Week 13
+
+<span class="date">April 11</span>
+
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+
+<span class="underlined">Homework</span>
+
++ AYP
 
 <br>
 
 ## Week 14
 
+<span class="date">April 19</span>
+
+<span class="underlined">In Class</span>
+
++ Presentation Workshopping
+
+<span class="underlined">Homework</span>
+
++ Work on final presentation
++ Finalize Documentation
+
+<br>
+
+#### 💥 MILESTONE -  Project & Documentation approval by Capstone Advisors
+
 <br>
 
 ## Week 15
+
+<span class="date">April 26</span>
+
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+
++ Final Individual Check-in
+
+<span class="underlined">Homework</span>
+
++ Finalize Presentations
 
 <br>
 
 ## Week 16
 
+<span class="date">May 3</span>
+
+<span class="underlined">In Class</span>
+
++ In-Class Presentations
+
+<span class="underlined">Homework</span>
+
++ Practice for public presentations
+
 <br>
 
-## Finals Week
+#### 💥 MILESTONE -  Public Presentations to faculty, mentors and outside critics
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+*Likely scheduled for the beginning of finals week - we will decide this together in the first few weeks of the semester*
+
+
 <br>
