--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -24,10 +24,10 @@ permalink: '/schedule'
 
 <span class="underlined">Homework</span>
 
-+ Set up your online journal and email me a link
-+ Precedents / Topics and things you’re most interested in
++ Set up your <span class="underlined">[online journal](/capstone-s17/doc)</span> and email me a link
++ Prepare your <span class="underlined">[portfolio presentation](/capstone-s17/portfolio-review)</span>
++ Begin making a list of precedents / topics / things you’re most interested in
 + Research + References 
-+ Prepare portfolio presentation
 
 <br>
 
@@ -44,7 +44,7 @@ permalink: '/schedule'
 + Mood board
 + Dream review
 + Research + References
-+ Read [Publics and Counterpublics]()
+<!-- + Read [Publics and Counterpublics]() -->
 
 <br>
 
