update for week 2

--- a/_posts/2016-09-07-students.md
+++ b/_posts/2016-09-07-students.md
@@ -8,9 +8,9 @@ permalink: "/students"
 
 Cal Affleck<br>
 Lupe Avalos<br>
-Carolyn Castanon<br>
+[Carolyn Castanon](https://carolyncastanon.wordpress.com/)<br>
 Andy Chuong<br>
-Jimmy Cordova<br>
+[Jimmy Cordova](https://jimmycordovatam.wordpress.com/category/capstone-spring-17/)<br>
 Susana Gomez-Burgos<br>
 Michael Gough<br>
 Kristof Klipfel<br>
@@ -25,4 +25,4 @@ Maggie Patton<br>
 
 Marla Bernstein<br>
 Meridith Richter<br>
-Brady Risendal<br>
+[Brady Risendal](https://bradycapstoneblog.wordpress.com/)<br>
