--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -41,10 +41,10 @@ permalink: '/schedule'
 
 <span class="underlined">Homework</span>
 
++ Project Summary and/or Domains & Precedents
 + Mood board
-+ Dream review
-+ Research + References
-<!-- + Read [Publics and Counterpublics]() -->
++ Goals / Objectives / Motivations
++ Read Michael Warner's <span class="underlined">[Publics and Counterpublics](https://drive.google.com/a/colorado.edu/file/d/0B5P76-OPUEpiaXZ3eWZkLTFJdU0/view?usp=sharing)</span>
 
 <br>
 
