adding student links

--- a/_posts/2016-09-07-students.md
+++ b/_posts/2016-09-07-students.md
@@ -9,20 +9,19 @@ permalink: "/students"
 Cal Affleck<br>
 Lupe Avalos<br>
 [Carolyn Castanon](https://carolyncastanon.wordpress.com/)<br>
-Andy Chuong<br>
+[Andy Chuong](https://chuongtam.wordpress.com/category/capstone/)<br>
 [Jimmy Cordova](https://jimmycordovatam.wordpress.com/category/capstone-spring-17/)<br>
 Susana Gomez-Burgos<br>
-Michael Gough<br>
+[Mike Gough](https://zimbabwe2017.wordpress.com/)<br>
 Kristof Klipfel<br>
 Chris Koski<br>
 Keren Megory-Cohen<br>
-Melissa Moonie<br>
-Maggie Patton<br>
+[Maggie Patton](https://littleformulations.wordpress.com/capstone/)<br>
 
 <br>
 
 ## Capstone 2
 
 Marla Bernstein<br>
-Meridith Richter<br>
+[Meridith Richter](https://m3ridith.wordpress.com/)<br>
 [Brady Risendal](https://bradycapstoneblog.wordpress.com/)<br>
