--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -56,21 +56,21 @@ permalink: '/schedule'
 
 + Lecture / Discussion:
 	+ Audience / Publics
-	+ Personas
+	+ Developing your ***WHY***
 	+ How do *you* fit into your work... 
-+ Developing a schedules
-+ Overview and Instructions for Capstone Proposal
++ Developing a schedule
++ Peer feedback
 
 
 <span class="underlined">Homework</span>
 
 + Make something to make your idea feel more real…
-	+ This depends on your specific project and interests, but this could be a cardboard model, clay, toothpicks, etc. This could also be storyboards or paper mock ups of screens. Bring to class during week 4.
-+ Models, scenarios, sketches - Written scenario, UX Persona…
-	+ Who is the target user? Develop a thorough [character profile]() of the user.
-+ Envision your project in multiple formats
+	+ This depends on your specific project and interests, but this could be a cardboard model, physical mockup, software study, etc. This could also be storyboards or paper mock ups of screens.
+	+ Envision your project in multiple formats
++ Written scenario / UX Persona
+	+ Who is the target user? Develop a thorough [character profile](https://drive.google.com/a/colorado.edu/file/d/0B5P76-OPUEpiSHAyUlMweXYzV1U/view?usp=sharing) of the user.
 + Work on your Production Schedule
-+ Work on Project Proposal
++ Work on Project Proposal / Continue to develop Project Summary
 + Research / AYP
 
 
@@ -80,16 +80,16 @@ permalink: '/schedule'
 
 <span class="date">February 8</span>
 
-<span class="underlined">In Class</span>
+<!-- <span class="underlined">In Class</span>
 
 + Lecture / Discussion:
 	+ DOCUMENTATION!!!!!!!!!!!
-+ Show & tell of scenarios, models, etc. 
-+ Peer feedback
++ Show & tell of scenarios, models, etc.  -->
+
 
 <span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
 
-+ Present your progress
++ Discuss your progress
 + Review drafts of proposals and schedules
 
 <span class="underlined">Homework</span>
