--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -104,7 +104,7 @@ permalink: '/schedule'
 #### 💥 MILESTONE - Submit Project Proposal by 5:00 p.m. on Thursday, February 9th
 
 *You will receive a thumbs-up or thumbs-down on your proposal. If you get a thumbs down, you will be notified and must work with your advisor to revise the concept. 
-You must have an approved thesis to continue the semester.*
+You must have an approved Capstone project to continue the semester.*
 
 <br>
 
