--- a/_posts/2016-09-07-students.md
+++ b/_posts/2016-09-07-students.md
@@ -7,21 +7,21 @@ permalink: "/students"
 ## Capstone 1
 
 Cal Affleck<br>
-Lupe Avalos<br>
+[Lupe Avalos](https://lupitasnoticias.wordpress.com/category/capstone/)<br>
 [Carolyn Castanon](https://carolyncastanon.wordpress.com/)<br>
 [Andy Chuong](https://chuongtam.wordpress.com/category/capstone/)<br>
 [Jimmy Cordova](https://jimmycordovatam.wordpress.com/category/capstone-spring-17/)<br>
-Susana Gomez-Burgos<br>
+[Susana Gomez-Burgos](https://sgomezburgos.com/category/capstone-one/)<br>
 [Mike Gough](https://zimbabwe2017.wordpress.com/)<br>
-Kristof Klipfel<br>
-Chris Koski<br>
-Keren Megory-Cohen<br>
+[Kristof Klipfel](https://kristoferklipfel.wordpress.com/capstone-1/)<br>
+[Chris Koski](https://buildingwithchris.wordpress.com/)<br>
+[Keren Megory-Cohen](https://codedocumentation.wordpress.com/category/capstone-1/)<br>
 [Maggie Patton](https://littleformulations.wordpress.com/capstone/)<br>
 
 <br>
 
 ## Capstone 2
 
-Marla Bernstein<br>
+[Marla Bernstein](https://marlabernstein.wordpress.com/category/capstone-2/)<br>
 [Meridith Richter](https://m3ridith.wordpress.com/)<br>
 [Brady Risendal](https://bradycapstoneblog.wordpress.com/)<br>
