--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -118,9 +118,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Lecture / Discussion
-	+ Creativity
-	+ Storytelling
++ Proposal Feedback & Expectations
 
 
 <span class="underlined">Homework</span>
@@ -141,7 +139,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <br>
 
-#### 💥 MILESTONE -  Projects set. &nbsp; No change of topics after March 1st.
+#### 💥 MILESTONE -  Topics set. &nbsp; No change of topics after March 1st.
 
 <br>
 
@@ -167,7 +165,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Midterm Presentations: **Capstone 2**
++ Midterm Presentations: Brady, Meridith, Marla, Chris, Carolyn, Cal
 
 <span class="underlined">Homework</span>
 
@@ -181,7 +179,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Midterm Presentations: **Capstone 1**
++ Midterm Presentations: Lupe, Karen, Jimmy, Susie, Andy, Kristof, Maggie
 
 <span class="underlined">Homework</span>
 
