--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -165,7 +165,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Midterm Presentations: Brady, Meridith, Marla, Chris, Carolyn, Cal
++ Midterm Presentations: Brady, Meridith, Marla, Chris, Carolyn, Kristof
 
 <span class="underlined">Homework</span>
 
@@ -179,7 +179,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Midterm Presentations: Lupe, Karen, Jimmy, Susie, Andy, Kristof, Maggie
++ Midterm Presentations: Lupe, Karen, Cal Jimmy, Susie, Andy, Maggie
 
 <span class="underlined">Homework</span>
 
