week 6 schedule change

--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -131,7 +131,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="date">February 22</span>
 
-<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+<span class="underlined">Mandatory Individual Check-in</span>
 
 <span class="underlined">Homework</span>
 
@@ -149,7 +149,8 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Presentation Guidelines
++ Midterm Presentation Guidelines
++ Individual Progress check-in
 
 <span class="underlined">Homework</span>
 
