update to schedule

--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -240,7 +240,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="date">April 11</span>
 
-<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+<span class="underlined">One-on-one Meetings</span>&nbsp; * *[by appointment](https://calendar.google.com/calendar/selfsched?sstoken=UUdLc0ZFRlNQWkYyfGRlZmF1bHR8M2ExNGRiNzQ3ZTk1NWE3NDQzMmFjZTZjNWQxYzRlMTA)* *
 
 <span class="underlined">Homework</span>
 
@@ -254,6 +254,7 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
++ Presentation Guidelines
 + Presentation Workshopping
 
 <span class="underlined">Homework</span>
@@ -263,9 +264,9 @@ You must have an approved Capstone project to continue the semester.*
 
 <br>
 
-#### 💥 MILESTONE -  Project & Documentation approval by Capstone Advisors
+<!-- #### 💥 MILESTONE -  Project & Documentation approval by Capstone Advisors
 
-<br>
+<br> -->
 
 ## Week 15
 
@@ -283,21 +284,32 @@ You must have an approved Capstone project to continue the semester.*
 
 ## Week 16
 
-<span class="date">May 3</span>
+<span class="date">May 3</span> 
 
-<span class="underlined">In Class</span>
+*No Class* - [ATLAS EXPO](http://atlas.colorado.edu/events/atlas-expo-spring-2017/)
 
-+ In-Class Presentations
+<!-- + In-Class Presentations -->
 
 <span class="underlined">Homework</span>
 
-+ Practice for public presentations
++ Practice for presentations
 
 <br>
 
 #### 💥 MILESTONE -  Public Presentations to faculty, mentors and outside critics
 
-*Likely scheduled for the beginning of finals week - we will decide this together in the first few weeks of the semester*
+<br>
+
+<hr>
+
+<br>
+
+## Final Presentations
+
+<!-- <br> -->
+<span class="underlined">***Friday, May 5th 4pm - 8pm***</span>
+
+All students must be present for the full presentation period. <br>ATLAS will provide dinner.  
 
 
 <br>
