--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -264,9 +264,9 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="date">April 26</span>
 
-<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *by appointment* *
+<span class="underlined">Mandatory One-on-one Meetings</span>&nbsp; * *[by appointment](https://calendar.google.com/calendar/selfsched?sstoken=UUdLc0ZFRlNQWkYyfGRlZmF1bHR8M2ExNGRiNzQ3ZTk1NWE3NDQzMmFjZTZjNWQxYzRlMTA)* *
 
-+ Final Individual Check-in
++ During our meeting, you will give me your presentation!!
 
 <span class="underlined">Homework</span>
 
@@ -287,9 +287,9 @@ You must have an approved Capstone project to continue the semester.*
 
 <br>
 
-#### 💥 MILESTONE -  Public Presentations to faculty, mentors and outside critics
+<!-- #### 💥 MILESTONE -  Public Presentations to faculty, mentors and outside critics
 
-<br>
+<br> -->
 
 <hr>
 
@@ -302,5 +302,10 @@ You must have an approved Capstone project to continue the semester.*
 
 All students must be present for the full presentation period. <br>ATLAS will provide dinner.  
 
+<br>
+
+## Final Deliverables Submitted
+
+<span class="underlined">***Due Wednesday May 10th at the end of the day***</span>
 
 <br>
