--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -306,6 +306,6 @@ All students must be present for the full presentation period. <br>ATLAS will pr
 
 ## Final Deliverables Submitted
 
-<span class="underlined">***Due Wednesday May 10th at the end of the day***</span>
+<span class="underlined">***Due Thursday May 11th by 10pm***</span>
 
 <br>
