deliverables and schedule update

--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -256,7 +256,7 @@ You must have an approved Capstone project to continue the semester.*
 <span class="underlined">Homework</span>
 
 + Work on final presentation
-+ Finalize Documentation
+<!-- + Finalize Documentation -->
 
 <br>
 
@@ -284,6 +284,7 @@ You must have an approved Capstone project to continue the semester.*
 <span class="underlined">Homework</span>
 
 + Practice for presentations
++ Work on finalizing your [deliverables](/capstone-s17/deliverables)
 
 <br>
 
@@ -307,5 +308,7 @@ All students must be present for the full presentation period. <br>ATLAS will pr
 ## Final Deliverables Submitted
 
 <span class="underlined">***Due Thursday May 11th by 10pm***</span>
+
+[Deliverables](/capstone-s17/deliverables)
 
 <br>
