--- a/_posts/2017-01-16-schedule.md
+++ b/_posts/2017-01-16-schedule.md
@@ -250,13 +250,12 @@ You must have an approved Capstone project to continue the semester.*
 
 <span class="underlined">In Class</span>
 
-+ Presentation Guidelines
-+ Presentation Workshopping
++ [Deliverables](/capstone-s17/deliverables)
++ [Presentations](https://docs.google.com/a/colorado.edu/presentation/d/1jfoPLamRvxa8YFGYEvU7W-SMV7aAQvj4LBcIOIu35uE/edit?usp=sharing) 
 
 <span class="underlined">Homework</span>
 
 + Work on final presentation
-<!-- + Finalize Documentation -->
 
 <br>
 
